--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/thesis_db
+spring.datasource.url=jdbc:mysql://localhost:3307/thesisAppMariadb
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
